--- a/fourier/Makefile
+++ b/fourier/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -I. -c -I/home/ruben/local/include/
-LFLAGS = -L/home/ruben/local/lib -lm -lfftw3
+LFLAGS = -L/home/ruben/local/lib -lfftw3 -lm
 
-sample1:
+fft1d_1:
 	$(CC) $(CFLAGS) $@.c -o $@.o
 	$(CC) $@.o $(LFLAGS) -o $@.x
 
